--- a/newaif.html
+++ b/newaif.html
@@ -7,6 +7,49 @@
   </div>
 </td>
 
+status_svg(status) {
+  switch (status) {
+    case "DRAFT":
+      return `<svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M3 17.25V21h3.75L19.81 7.94l-3.75-3.75L3 17.25z"/>
+                <path d="M20.71 6.04a1 1 0 0 0 0-1.41l-1.34-1.34a1 1 0 0 0-1.41 0l-1.13 1.13 3.75 3.75 1.13-1.13z"/>
+              </svg>`;
+
+    case "PLANNED":
+      return `<svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M19 4h-1V2h-2v2H8V2H6v2H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 16H5V9h14v11z"/>
+              </svg>`;
+
+    case "AWAITING_VALIDATION":
+      return `<svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                <circle cx="12" cy="12" r="9" opacity="0.2">
+                  <animate attributeName="opacity" values="0.2;0.6;0.2" dur="1.5s" repeatCount="indefinite"/>
+                </circle>
+                <path d="M12 6v6l4 2"/>
+              </svg>`;
+
+    case "COMMERCIALLY_APPROVED":
+      return `<svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z"/>
+              </svg>`;
+
+    case "INVALID":
+      return `<svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M12 2a10 10 0 1 0 10 10A10 10 0 0 0 12 2zm5 13.6L15.6 17 12 13.4 8.4 17 7 15.6 10.6 12 7 8.4 8.4 7 12 10.6 15.6 7 17 8.4 13.4 12z"/>
+              </svg>`;
+
+    case "CLOSED":
+      return `<svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                <path d="M12 2a5 5 0 0 0-5 5v3H6a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8a2 2 0 0 0-2-2h-1V7a5 5 0 0 0-5-5zm-3 8V7a3 3 0 0 1 6 0v3z"/>
+              </svg>`;
+
+    default:
+      return `<svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                <circle cx="12" cy="12" r="10"/>
+              </svg>`;
+  }
+}
+
 status_icon(status) {
   switch (status) {
     case "DRAFT":
